header and table alignment fix

--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,7 +1,7 @@
 .header {
   &__container {
     height: 112px;
-    padding: 0 15px;
+    padding: 0 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
