--- a/src/Components/Table/table.scss
+++ b/src/Components/Table/table.scss
@@ -28,6 +28,5 @@
     color: $textDarkGrey;
     letter-spacing: 0.4px;
     line-height: 30px;
-    min-width: 100px;
   }
 }
